# membrane

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deployment/: membrane.service
deployment/nginx/: nginx.conf
docs/: DEPLOY.md  architecture.md  deployment.md  faq.md  getting-started.md
membrane/: __init__.py  artifact.py  async_prefill_dispatcher.py  cache_metrics.py  canonical_store.py  chunked_transfer.py  cli.py  cluster_replicator.py  co_access_index.py  cost_model.py  delta_encoder.py  delta_sync.py  distributed_directory.py  dynamic_role_manager.py  economic_router.py  exact_index.py  fragment.py  fragment_graph.py  fragment_store.py  fragmentation_engine.py  global_directory.py  graph_manager.py  hash_ring.py  index_system.py  interval_tree.py  joint_optimizer.py  kv_cache_manager.py  kv_segment.py  kv_transfer_after_prefill.py  latency_router.py  logging.py  lru_cache.py  membrane_node.py  memory_object.py  node_selector.py  node_telemetry.py  offload_decision_engine.py  origin_node.py  positional_index.py  predictor.py  (+23 more)
membrane/compute/: __init__.py  anthropic_backend.py  backend.py  cpu_backend.py  gpu_backend.py  ollama_backend.py  openai_backend.py  transformers_backend.py
membrane/model/: __init__.py  metrics.py  optimizer.py  profiler.py  router.py  scheduler.py  simulator.py  throughput_model.py  workload.py
membrane/network/: __init__.py  cluster_manager.py  config.py  gossip_state.py  peer_client.py  remote_transfer.py
membrane/persistence/: __init__.py  memory_backend.py  redis_backend.py
membrane/transport/: __init__.py  fastapi_server.py  grpc_server.py  http_server.py
membrane/transport/proto/: membrane.proto  membrane_pb2.py  membrane_pb2_grpc.py
scripts/: cleanup.sh  demo.py  demo_full.py  demo_membrane.py  setup.sh
tests/: test_optimizer.py  test_profiler.py  test_router.py  test_scheduler.py  test_simulator.py  test_throughput_model.py  test_workload.py
tests/membrane/: test_artifact.py  test_async_prefill_dispatcher.py  test_cache_metrics.py  test_canonical_store.py  test_chunked_transfer.py  test_cli.py  test_cluster_replicator.py  test_co_access_index.py  test_cost_model.py  test_delta_encoder.py  test_delta_sync.py  test_distributed_directory.py  test_dynamic_role_manager.py  test_economic_router.py  test_exact_index.py  test_fragment.py  test_fragment_graph.py  test_fragment_store.py  test_fragmentation_engine.py  test_global_directory.py  test_graph_manager.py  test_hash_ring.py  test_index_system.py  test_integration.py  test_joint_optimizer.py  test_kv_cache_manager.py  test_kv_segment.py  test_kv_transfer_after_prefill.py  test_latency_router.py  test_membrane_node.py  test_memory_object.py  test_node_selector.py  test_node_telemetry.py  test_offload_decision_engine.py  test_origin_node.py  test_positional_index.py  test_predictor.py  test_prefill_adapter.py  test_prefix.py  test_prefix_version_chain.py  (+21 more)
tests/membrane/compute/: test_anthropic_backend.py  test_cpu_backend.py  test_gpu_backend.py  test_ollama_backend.py  test_openai_backend.py  test_transformers_backend.py
tests/membrane/network/: test_cluster_manager.py  test_gossip_state.py  test_peer_client.py
tests/membrane/persistence/: test_memory_backend.py  test_redis_backend.py
tests/membrane/transport/: test_fastapi_server.py  test_grpc_server.py  test_http_server.py
