[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane"
version = "0.1.0"
description = "Membrane: Global Contextual Memory Fabric for cross-datacenter LLM serving."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Reproduction Bot"},
]
keywords = ["llm", "inference", "serving", "disaggregation", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "redis>=5.0"]
server = ["grpcio>=1.60", "grpcio-tools>=1.60", "redis>=5.0", "fastapi>=0.110", "uvicorn[standard]>=0.25", "httpx>=0.27", "pydantic>=2.0"]
gpu = ["torch>=2.0"]
local-llm = ["transformers>=4.35", "tokenizers>=0.15", "torch>=2.0", "sentencepiece>=0.1", "protobuf>=3.20"]

[project.scripts]
membrane = "membrane.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["membrane*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
