[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane"
version = "0.1.1"
description = "Membrane: Global Contextual Memory Fabric for cross-datacenter LLM serving."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "sachn-cs"},
]
keywords = ["llm", "inference", "serving", "disaggregation", "simulation", "kv-cache", "memory-fabric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/sachn-cs/membrane"
Repository = "https://github.com/sachn-cs/membrane"
Issues = "https://github.com/sachn-cs/membrane/issues"
Changelog = "https://github.com/sachn-cs/membrane/blob/master/CHANGELOG.md"
Documentation = "https://github.com/sachn-cs/membrane/tree/master/docs"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=2.1.0", "redis>=8.0.1", "ruff>=0.4"]
server = ["grpcio>=1.81.1", "grpcio-tools>=1.60", "redis>=8.0.1", "fastapi>=0.110", "uvicorn[standard]>=0.25", "httpx>=0.28.1", "pydantic>=2.0"]
gpu = ["torch>=2.0"]
local-llm = ["transformers>=5.13.0", "tokenizers>=0.15", "torch>=2.0", "sentencepiece>=0.1", "protobuf>=7.35.1"]

[project.scripts]
membrane = "membrane.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["membrane*"]

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["membrane/transport/proto/"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
