[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane"
version = "0.1.2"
description = "Membrane: Global Contextual Memory Fabric for cross-datacenter LLM serving."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sachin <sachncs@gmail.com>"},
]
keywords = ["llm", "inference", "serving", "disaggregation", "simulation", "kv-cache", "memory-fabric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/sachncs/membrane"
Repository = "https://github.com/sachncs/membrane"
Issues = "https://github.com/sachncs/membrane/issues"
Changelog = "https://github.com/sachncs/membrane/blob/master/CHANGELOG.md"
Documentation = "https://github.com/sachncs/membrane/tree/master/docs"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=4.0",
    "mypy>=2.1.0",
    "redis>=8.0.1",
    "ruff>=0.15.21",
    # Server extras are needed at test-collection time because the
    # compute-backend tests import httpx and the integration /
    # transport tests import fastapi and grpcio.
    "grpcio>=1.82.1",
    "grpcio-tools>=1.82.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.51.0",
    "httpx>=0.28.1",
    "pydantic>=2.0",
]
server = ["grpcio>=1.82.1", "grpcio-tools>=1.81.1", "redis>=8.0.1", "fastapi>=0.110", "uvicorn[standard]>=0.51.0", "httpx>=0.28.1", "pydantic>=2.0"]
gpu = ["torch>=2.13.0"]
local-llm = ["transformers>=5.13.1", "tokenizers>=0.23.1", "torch>=2.13.0", "sentencepiece>=0.2.2", "protobuf>=7.35.1"]

[project.scripts]
membrane = "membrane.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["membrane*"]

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["membrane/transport/proto/"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
# Generated gRPC stubs preserve the canonical PascalCase method names from
# the proto file; ignore N802 so ruff does not flag them.
"membrane/transport/proto/*.py" = ["N802"]
# gRPC servicer methods must keep their PascalCase names to match the
# proto-defined RPC names; the abstract base class generated by
# grpc_tools uses these names too.
"membrane/transport/grpc_server.py" = ["N802"]
# Test files may import modules purely for their side effects (fixtures).
"tests/**" = ["F401", "N802", "B007", "B905", "E741"]
# membrane/__init__.py re-exports public symbols for convenience, including
# optional backends gated on ImportError.
"membrane/__init__.py" = ["F401"]
# CLI top-level helper tests do not use every imported symbol.
"membrane/cli.py" = ["B008"]
